--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- 引用图标文件 -->
+    <link rel="icon" href="favicon.png" type="image/x-icon">
     <title>图片工具包导航页</title>
     <style>
         /* 全局样式 */
