--- a/image-merge.html
+++ b/image-merge.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- 引用 favicon.png 作为浏览器图标 -->
+    <link rel="icon" href="favicon.png" type="image/png">
     <title>图片拼接工具</title>
     <style>
         /* 全局样式 */
