--- a/remove.html
+++ b/remove.html
@@ -4,11 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- 引用 favicon.png 作为浏览器图标 -->
     <link rel="icon" href="favicon.png" type="image/png">
     <title>智能抠图工具</title>
     <style>
-        /* 全局样式 */
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
@@ -35,12 +33,11 @@
             padding: 20px;
             backdrop-filter: blur(10px);
             border: 1px solid rgba(255, 255, 255, 0.2);
-            width: 80%;
-            max-width: 800px;
+            width: 90%;
+            max-width: 1200px;
             text-align: center;
         }
 
-        /* 文件上传区域 */
         .upload-area {
             border: 2px dashed #007BFF;
             padding: 20px;
@@ -53,77 +50,29 @@
             background: rgba(0, 123, 255, 0.1);
         }
 
-        /* 图片预览区域 */
         .image-preview {
             display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
+            justify-content: space-between;
+            gap: 20px;
             margin-bottom: 20px;
+        }
+
+        .image-preview .image-container {
+            flex: 1;
+            text-align: center;
         }
 
         .image-preview img {
-            max-width: 100px;
-            max-height: 100px;
+            max-width: 100%;
+            max-height: 400px;
             border-radius: 5px;
             border: 1px solid #ddd;
-            cursor: move;
-            /* 新增拖动样式 */
-            opacity: 1;
-            transition: opacity 0.3s;
-            position: relative;
-            transition: transform 0.3s;
         }
 
-        /* 拖动时的样式 */
-        .image-preview img.dragging {
-            opacity: 0.5;
-            transform: scale(1.1);
+        .actions {
+            margin-top: 20px;
         }
 
-        /* 选中图片的样式 */
-        .image-preview img.selected {
-            border: 2px solid #ff0000;
-        }
-
-        /* 叉叉标志样式 */
-        .delete-icon {
-            position: absolute;
-            top: -8px;
-            right: -8px;
-            background: radial-gradient(circle, rgba(255, 0, 0, 1) 0%, rgba(204, 0, 0, 1) 100%);
-            color: white;
-            width: 20px;
-            height: 20px;
-            border-radius: 50%;
-            text-align: center;
-            line-height: 20px;
-            cursor: pointer;
-            z-index: 2;
-            display: none;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
-            font-weight: bold;
-            font-size: 16px;
-            transition: all 0.2s ease;
-        }
-
-        .delete-icon:hover {
-            transform: scale(1.1);
-        }
-
-        .image-preview img.selected + .delete-icon {
-            display: block;
-        }
-
-        /* 导出选项 */
-        .export-options {
-            margin-bottom: 20px;
-        }
-
-        .export-options label {
-            margin-right: 10px;
-        }
-
-        /* 操作按钮 */
         .actions button {
             padding: 10px 20px;
             background: #007BFF;
@@ -138,19 +87,6 @@
             background: #0056b3;
         }
 
-        /* 拼接结果区域 */
-        .result {
-            margin-top: 20px;
-            display: none; /* 初始隐藏 */
-        }
-
-        .result canvas {
-            max-width: 100%;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-        }
-
-        /* 返回主菜单按钮样式 */
         .back-to-menu {
             position: absolute;
             top: 20px;
@@ -172,6 +108,62 @@
             background: rgba(255, 255, 255, 0.2);
             transform: translateY(-3px);
         }
+
+        .hidden {
+            display: none;
+        }
+
+        /* 添加美化对话框的样式 */
+        .loading-dialog {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: rgba(255, 255, 255, 0.9);
+            border: 1px solid #007BFF;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            padding: 20px;
+            text-align: center;
+            z-index: 1000;
+            animation: fadeIn 0.3s ease-in-out;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translate(-50%, -50%) scale(0.9);
+            }
+            to {
+                opacity: 1;
+                transform: translate(-50%, -50%) scale(1);
+            }
+        }
+
+        .loading-dialog p {
+            color: #333;
+            font-size: 1.2rem;
+            margin: 0;
+        }
+
+        .loading-spinner {
+            width: 40px;
+            height: 40px;
+            border: 4px solid rgba(0, 123, 255, 0.1);
+            border-top: 4px solid #007BFF;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+            margin: 10px auto;
+        }
+
+        @keyframes spin {
+            0% {
+                transform: rotate(0deg);
+            }
+            100% {
+                transform: rotate(360deg);
+            }
+        }
     </style>
 </head>
 
@@ -179,42 +171,49 @@
     <a href="index.html" class="back-to-menu">返回主菜单</a>
     <div class="container">
         <h1>智能抠图工具</h1>
-        <!-- 文件上传区域 -->
         <div class="upload-area" id="uploadArea">
             <p>点击或拖拽图片到此区域上传</p>
             <input type="file" id="fileInput" accept="image/*" style="display: none;">
         </div>
-        <!-- 图片预览区域 -->
-        <div class="image-preview" id="imagePreview"></div>
-        <!-- 操作按钮 -->
+        <div class="image-preview" id="imagePreview">
+            <div class="image-container">
+                <h3 class="hidden" id="originalText">原图</h3>
+                <img id="originalImage" src="#" alt="原图" class="hidden">
+            </div>
+            <div class="image-container">
+                <h3 class="hidden" id="resultText">效果图</h3>
+                <img id="resultImage" src="#" alt="效果图" class="hidden">
+            </div>
+        </div>
         <div class="actions">
             <button onclick="removeBackground()" id="removeBgButton" disabled>智能抠图</button>
+            <!-- 初始隐藏保存图片按钮 -->
+            <button onclick="saveImage()" id="saveButton" class="hidden">保存图片</button>
+            <button onclick="clearImages()" id="clearButton" disabled>清除图片</button>
         </div>
-        <!-- 结果区域 -->
-        <div class="result" id="resultArea">
-            <canvas id="resultCanvas"></canvas>
-        </div>
+    </div>
+    <!-- 添加美化对话框的 HTML 结构 -->
+    <div class="loading-dialog hidden" id="loadingDialog">
+        <div class="loading-spinner"></div>
+        <p>正在抠图中，请耐心等待...</p>
     </div>
 
     <script>
-        // 获取元素
         const uploadArea = document.getElementById('uploadArea');
         const fileInput = document.getElementById('fileInput');
-        const imagePreview = document.getElementById('imagePreview');
+        const originalImage = document.getElementById('originalImage');
+        const resultImage = document.getElementById('resultImage');
         const removeBgButton = document.getElementById('removeBgButton');
-        const resultArea = document.getElementById('resultArea');
-        const resultCanvas = document.getElementById('resultCanvas');
-        const ctx = resultCanvas.getContext('2d');
+        const saveButton = document.getElementById('saveButton');
+        const clearButton = document.getElementById('clearButton');
+        const originalText = document.getElementById('originalText');
+        const resultText = document.getElementById('resultText');
 
         let selectedImage;
+        let resultBlob;
 
-        // 设置 API Key
-        const apiKey = 'BhesvrbsoSF23gaDdWHzEr2j'; // 将你的 API Key 写在这里
-
-        // 点击上传区域触发文件选择
         uploadArea.addEventListener('click', () => fileInput.click());
 
-        // 拖拽上传
         uploadArea.addEventListener('dragover', (e) => {
             e.preventDefault();
             uploadArea.style.backgroundColor = 'rgba(0, 123, 255, 0.1)';
@@ -233,7 +232,6 @@
             }
         });
 
-        // 文件选择
         fileInput.addEventListener('change', (e) => {
             const files = e.target.files;
             if (files.length > 0) {
@@ -241,7 +239,6 @@
             }
         });
 
-        // 处理文件
         function handleFile(file) {
             const reader = new FileReader();
             reader.onload = (e) => {
@@ -249,22 +246,29 @@
                 img.src = e.target.result;
                 img.onload = () => {
                     selectedImage = img;
-                    imagePreview.innerHTML = '';
-                    imagePreview.appendChild(img);
+                    originalImage.src = img.src;
+                    originalImage.classList.remove('hidden');
+                    originalText.classList.remove('hidden');
                     removeBgButton.disabled = false;
+                    clearButton.disabled = false;
+                    resultImage.classList.add('hidden');
+                    resultText.classList.add('hidden');
+                    // 抠图前隐藏保存按钮
+                    saveButton.classList.add('hidden');
                 };
             };
             reader.readAsDataURL(file);
         }
 
-        // 智能抠图
         async function removeBackground() {
             if (!selectedImage) {
                 alert('请先选择一张图片！');
                 return;
             }
+            // 显示加载对话框
+            const loadingDialog = document.getElementById('loadingDialog');
+            loadingDialog.classList.remove('hidden');
 
-            // 将图片转换为 Blob
             const canvas = document.createElement('canvas');
             const ctx = canvas.getContext('2d');
             canvas.width = selectedImage.naturalWidth;
@@ -272,16 +276,14 @@
             ctx.drawImage(selectedImage, 0, 0, canvas.width, canvas.height);
 
             canvas.toBlob(async (blob) => {
-                // 创建 FormData 对象
                 const formData = new FormData();
                 formData.append('image_file', blob, 'image.png');
 
                 try {
-                    // 调用智能抠图 API
                     const response = await fetch('https://api.remove.bg/v1.0/removebg', {
                         method: 'POST',
                         headers: {
-                            'X-Api-Key': apiKey, // 使用 API Key 进行身份验证
+                            'X-Api-Key': 'BhesvrbsoSF23gaDdWHzEr2j',
                         },
                         body: formData,
                     });
@@ -290,26 +292,51 @@
                         throw new Error(`抠图失败: ${response.statusText}`);
                     }
 
-                    // 获取抠图结果
-                    const resultBlob = await response.blob();
+                    resultBlob = await response.blob();
                     const resultUrl = URL.createObjectURL(resultBlob);
 
-                    // 显示抠图结果
-                    const resultImg = new Image();
-                    resultImg.src = resultUrl;
-                    imagePreview.innerHTML = '';
-                    imagePreview.appendChild(resultImg);
-
-                    // 提供下载链接
-                    const link = document.createElement('a');
-                    link.href = resultUrl;
-                    link.download = 'removed-background.png';
-                    link.click();
+                    resultImage.src = resultUrl;
+                    resultImage.classList.remove('hidden');
+                    resultText.classList.remove('hidden');
+                    // 抠图成功后显示保存按钮
+                    saveButton.classList.remove('hidden');
                 } catch (error) {
                     console.error('抠图失败:', error);
                     alert('抠图失败，请检查 API Key 或网络连接！');
+                } finally {
+                    // 隐藏加载对话框
+                    const loadingDialog = document.getElementById('loadingDialog');
+                    loadingDialog.classList.add('hidden');
                 }
             }, 'image/png');
+        }
+
+        function saveImage() {
+            if (!resultBlob) {
+                alert('请先完成抠图！');
+                return;
+            }
+
+            const link = document.createElement('a');
+            link.href = URL.createObjectURL(resultBlob);
+            link.download = 'removed-background.png';
+            link.click();
+        }
+
+        function clearImages() {
+            originalImage.src = '#';
+            resultImage.src = '#';
+            originalImage.classList.add('hidden');
+            resultImage.classList.add('hidden');
+            originalText.classList.add('hidden');
+            resultText.classList.add('hidden');
+            removeBgButton.disabled = true;
+            // 清除图片后隐藏保存按钮
+            saveButton.classList.add('hidden');
+            clearButton.disabled = true;
+            fileInput.value = '';
+            selectedImage = null;
+            resultBlob = null;
         }
     </script>
 </body>
