--- a/index.html
+++ b/index.html
@@ -135,6 +135,13 @@
                 <p>快速去除图片背景</p>
                 <a id="cutoutBtn" href="remove.html">开始使用</a>
             </div>
+            <!-- 长图切片 -->
+            <div class="card">
+                <i class="fas fa-crop"></i>
+                <h2>长图切片</h2>
+                <p>将长图切成多个部分</p>
+                <a href="image-slice.html">开始使用</a>
+            </div>
         </div>
     </div>
     <!-- 引入 SweetAlert2 库的 JavaScript -->
